pld-comp/tests/ifcc-test-output/testfiles-3_8_fivisions/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:1: error: version control conflict marker in file
    3 | <<<<<<< HEAD
      | ^~~~~~~
input.c:5:1: error: ‘a’ undeclared (first use in this function)
    5 | a=4;
      | ^
input.c:5:1: note: each undeclared identifier is reported only once for each function it appears in
input.c:6:1: error: ‘b’ undeclared (first use in this function)
    6 | b=2;
      | ^
input.c:9:1: error: version control conflict marker in file
    9 | =======
      | ^~~~~~~
input.c:12:9: error: redefinition of ‘c’
   12 |     int c=a/b;
      |         ^
input.c:7:5: note: previous definition of ‘c’ was here
    7 | int c=a/b;
      |     ^
input.c:14:1: error: version control conflict marker in file
   14 | >>>>>>> 268fcc39c0ba7ef84fed24a7f849c2813a2ca136
      | ^~~~~~~
input.c:14:9: error: invalid suffix "fcc39c0ba7ef84fed24a7f849c2813a2ca136" on integer constant
   14 | >>>>>>> 268fcc39c0ba7ef84fed24a7f849c2813a2ca136
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

return code: 1
